--- a/SciPy.ipynb
+++ b/SciPy.ipynb
@@ -2,21 +2,105 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nImport the package 'linalg' from the SciPy library and use the 'solve' methode to solve the provided linear equations to find the value of x and y\\n\""
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Import the package 'linalg' from the SciPy library and use the 'solve' methode to solve the provided linear equations to find the value of x and y\n",
     "\"\"\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the library\n",
+    "import numpy as np\n",
+    "from scipy import linalg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test has 30 questions and worth 150 marks\n",
+    "\n",
+    "# True and false questions worth 4 marks each \n",
+    "# Multiple choice questions worth 9 points each\n",
+    "\n",
+    "# Let x is the number of true/ false questions \n",
+    "# #let y is the number of multiple choice questions\n",
+    "\n",
+    "# (x + у = 30 )\n",
+    "# (4x + 9 = 150)\n",
+    "\n",
+    "testQuestionVariable = np.array([[1,1],[4,9]])\n",
+    "testQuestionValue = np.array([30,150])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([24.,  6.])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#use linalg function of Scipy\n",
+    "#use solve method to solve the linear equation and find value for × and y\n",
+    "linalg.solve(testQuestionVariable, testQuestionValue)"
+   ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.9.6 64-bit",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
