--- a/labelFeature_reduction_demo.ipynb
+++ b/labelFeature_reduction_demo.ipynb
@@ -32,6 +32,12 @@
     "    Step 1: Instantiate LDA.\n",
     "    Step 1: Transform the X variable using LDA.\n",
     "\n",
+    "Key Takewaways:\n",
+    "    *   Feature selection allows you to select the features thatcontribute most to the prediction variable.\n",
+    "    *   Factor analysis is used to reduce large number of variables into fewer number of factors.\n",
+    "    *   PCA seeks a linear combination of variables in order toextract maximum variance.\n",
+    "    *   LDA finds the component axes that maximize the variance of PCA.\n",
+    "\n",
     "\"\"\""
    ]
   },
