las update no changes

--- a/labelFeature_reduction_demo.ipynb
+++ b/labelFeature_reduction_demo.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\n\\nProblem Statement:\\nConsider the iris dataset preloaded within the mixtend library. Segregate\\nthe data and labels accordingly and transform the data to two linear\\ndiscriminants.\\nYou are supposed to perform LDA as a dimensionality reduction technique.\\n\\n\\nSteps to use LDA:\\n    Step 1: Import Libraries and the dataset.\\n    Step 1: Define the data and target values.\\n    Step 1: Instantiate LDA.\\n    Step 1: Transform the X variable using LDA.\\n\\n'"
+       "'\\n\\nProblem Statement:\\nConsider the iris dataset preloaded within the mixtend library. Segregate\\nthe data and labels accordingly and transform the data to two linear\\ndiscriminants.\\nYou are supposed to perform LDA as a dimensionality reduction technique.\\n\\n\\nSteps to use LDA:\\n    Step 1: Import Libraries and the dataset.\\n    Step 1: Define the data and target values.\\n    Step 1: Instantiate LDA.\\n    Step 1: Transform the X variable using LDA.\\n\\nKey Takewaways:\\n    *   Feature selection allows you to select the features thatcontribute most to the prediction variable.\\n    *   Factor analysis is used to reduce large number of variables into fewer number of factors.\\n    *   PCA seeks a linear combination of variables in order toextract maximum variance.\\n    *   LDA finds the component axes that maximize the variance of PCA.\\n\\n'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "       [-1.02809771,  0.19545574]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,6 +233,36 @@
     "x_lda = lda.transform(x)\n",
     "\n",
     "x_lda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "serie1 = pd.Series(3,index=['a','b','c'])\n",
+    "\n",
+    "\n",
+    "a = np.array([1,2,3])\n",
+    "b = np.hsplit(a, 3)\n",
+    "b\n",
+    "\n",
+    "a1 = len([\"hi\",6, 9, 5])\n",
+    "a1"
    ]
   }
  ],
